--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.3.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9"
   },
   "scripts": {
     "start": "react-scripts start",
